added plan api
