# app/models/shop_plan.rb
@@ -1,0 +1,5 @@
+# frozen_string_literal: true
+
+class ShopPlan < ApplicationRecord
+  belongs_to :food
+end
