# app/serializers/shop_plan_serializer.rb
@@ -1,0 +1,11 @@
+# frozen_string_literal: true
+
+class ShopPlanSerializer < ActiveModel::Serializer
+  attributes :id,
+             :notice,
+             :done,
+             :created_at,
+             :updated_at
+
+  belongs_to :food
+end
